--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <!-- 移动端适配 - 低版本机型viewport支持 -->
+    <script src="//g.alicdn.com/fdilab/lib3rd/viewport-units-buggyfill/0.6.2/??viewport-units-buggyfill.hacks.min.js,viewport-units-buggyfill.min.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,5 +41,25 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      window.onload = function () {
+        window.viewportUnitsBuggyfill.init({
+          hacks: window.viewportUnitsBuggyfillHacks
+        });
+        // 验证输出
+        const winDPI = window.devicePixelRatio;
+        const uAgent = window.navigator.userAgent;
+        const screenHeight = window.screen.height;
+        const screenWidth = window.screen.width;
+        const winWidth = window.innerWidth;
+        const winHeight = window.innerHeight;
+
+        console.log(winDPI, "设备 DPI");
+        console.log(uAgent, "客户端");
+        console.log(screenWidth, "屏幕宽度");
+        console.log(winHeight, "屏幕高度");
+        console.log(winWidth, "Windows Width");
+      }
+    </script>
   </body>
 </html>
